MVC server -- functionality : signin/login/myaccount/play

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@nguniversal/express-engine": "^7.0.2",
     "body-parser": "~1.18.3",
     "express": "^4.16.4",
+    "express-myconnection": "^1.0.4",
+    "md5": "^2.2.1",
     "method-override": "~3.0.0",
     "morgan": "~1.9.1",
     "mysql": "~2.16.0"
