--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@nguniversal/express-engine": "^7.0.2",
     "body-parser": "~1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-myconnection": "^1.0.4",
     "md5": "^2.2.1",
